--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,17 @@
 <!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+<view class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('/images/bund.jpeg');">
+  <view class="card-category">Jingan</view>
+  <view class="card-description">
+    <image class="icon" src="/images/distance.png"> </image>
+    <text> 1.5 km </text>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="attendees">
+    <image class="icon" src="/images/people.png"> </image>
+    <text> 25 committed </text>
   </view>
+    <image class="card-user" src="/images/leader.jpeg"> </image>
+  </view>
+<view>
+  <a class="card-link" href="#" ></a>
 </view>
+
