--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,74 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+.card {
+  height: 130px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-size: cover !important;
+  background-position: center;
+  color: white;
+  position: relative;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 5px;
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+}
+.card-user {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  height: 35px;
+  width: 35px;
   border-radius: 50%;
+  border: white;
+  border-width: 20px;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.icon {
+  height: 20px;
+  width: 20px;
+
 }
 
-.usermotto {
-  margin-top: 200px;
+.card-category {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+.card-description {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+
+.attendees {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.card-description h2 {
+  font-size: 18px;
+}
+.card-description p {
+  font-size:  px;
+  opacity: 0.7;
+  font-weight: lighter;
+}
+
+
+
+.card-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  z-index: 2;
+  background: black;
+  opacity: 0;
+}
+.card-link:hover {
+  opacity: 0.1;
 }
