--- a/pages/events/events.wxss
+++ b/pages/events/events.wxss
@@ -10,8 +10,23 @@
   margin-left: 10px;
   margin-right: 10px;
   border-radius: 5px;
-
 }
+
+.card-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 10rpx;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));
+  border-radius: 10rpx;
+  position: absolute;
+  top: 0;
+}
+
 .card-user {
   position: absolute;
   right: 10px;
