--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -1,1 +1,155 @@
 /* pages/profile/profile.wxss */
+label {
+  display: block;
+  margin: 0 0 40px;
+  font-size: 12px;
+  text-align: center;
+}
+label:before {
+  content: 'Username: ';
+  font-weight: 600;
+}
+
+.card {
+  width: 100vw;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+  overflow: hidden;
+  position: fixed;
+}
+.card-header {
+  position: relative;
+  background: #303841;
+  text-align: center;
+  overflow: hidden;
+   /* padding-top:30rpx;  */
+  height: 38vh;
+}
+.card-header__avatar {
+  background: #303841;
+  background-position: center 30%;
+  background-size: 100%;
+  padding: 12rpx 0;
+  height: 83%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.card-header__avatar image {
+  width:300rpx;
+  height:300rpx;
+  display:inline-block;
+  overflow:hidden;
+  border-radius:50%;
+}
+
+.card-header__follow {
+  position: relative;
+  background: #FFFFFF;
+  border-radius: 4rpx;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 6px 10px;
+  color: #333333;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: normal;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding-bottom: 10rpx;
+}
+.card-content {
+  text-align: center;
+  height: 25vh;
+  margin-top:9vh;
+}
+.card-content__username {
+  margin: 0 0 10px;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.card-content__username .badge {
+  display: inline-block;
+  background: #FCD000;
+  border-radius: 2px;
+  margin: 0 10px 0;
+  padding: 4px;
+  color: #333333;
+  font-size: 10px;
+  font-weight: 600;
+  vertical-align: middle;
+}
+.card-content__bio {
+  color: #666666;
+  font-size: 12px;
+}
+.card-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-around;
+  background: #F3F3F3;
+  color: #333333;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  align-items: center;
+  height: 14vh;
+}
+.card-footer .label {
+  display: block;
+  margin: 4px 0 0;
+  color: #666666;
+  font-size: 10px;
+  font-weight: 400;
+}
+
+.card-footer__pens {
+  max-width: 35vw;
+}
+
+
+/* Button */
+.btn-primary {
+  color: white;
+  box-shadow: 1rpx 1rpx 1rpx #3A4750;
+  width: 30%;
+  height: 60rpx;
+  margin-top: 20rpx;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background-color: #3A4750;
+}
+
+.btn-primary-hover {
+  background-color: #333;
+  transition: 3ms;
+}
+
+
+.btn-area {
+    /* margin: 10rpx 0 80rpx 0; */
+    height: 12vh;
+}
+
+/* verified / unverified */
+
+.verified {
+  font-weight: 500;
+  color: #2ecc71;
+}
+
+.unverified {
+  color: #e74c3c;
+}
