--- a/pages/event/event.wxml
+++ b/pages/event/event.wxml
@@ -17,18 +17,19 @@
   </view>
 
   <view class="info-container">
-  <text class="card-title">Info</text>
-  <text>Workout Type: {{workout_type}}</text>
-  <text>Directions: {{directions}}</text>
-  <text>Address: {{address}}</text>
-  <text>AQI: {{aqi}}</text>
-  <text>Date: {{dateObject.day}}/{{dateObject.month}}/{{dateObject.year}}</text>
-  <text>Time: {{dateObject.hour}}:{{dateObject.minutes}}</text>
+    <text class="card-title">Info</text>
+    <text>Workout Type: {{workout_type}}</text>
+    <text>Directions: {{directions}}</text>
+    <text>Address: {{address}}</text>
+    <text>AQI: {{aqi}}</text>
+    <text>Date: {{dateObject.day}}/{{dateObject.month}}/{{dateObject.year}}</text>
+    <text>Time: {{dateObject.hour}}:{{dateObject.minutes}}</text>
   </view>
-
-
-
-
-
-
+  <map id="map" longitude="{{marker[0].longitude}}" latitude="{{marker[0].latitude}}" scale="14" markers="{{marker}}" bindmarkertap="markertap" show-location></map>
+  <view class="{{is_cancelled ? 'cancelled-card' : 'alert-card'}}">
+    <view class="card-title">Announcement</view>
+    <view class="card-desc">
+      {{is_cancelled ? 'The event is cancelled due to weather' : 'Fitfam t-shirts have arrived!  You can pick your shirt up at the workout today.'}}
+    </view>
+  </view>
 </view>
