--- a/pages/event/event.wxss
+++ b/pages/event/event.wxss
@@ -33,12 +33,6 @@
 .button-holder button {
   font-size: 15px;
 }
-.info-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-}
 .card-title {
   margin-bottom: 10px;
   font-weight: bold;
@@ -49,7 +43,20 @@ map {
   width: 100vw;
   height: 250rpx;
 }
-
+.info-card {
+  width: 94vw;
+  margin: 0 3vw;
+  margin-bottom: 20rpx;
+  background: linear-gradient(to bottom left, #FDFFEA ,#FFFBE6);
+  border-radius: 10rpx;
+  box-shadow: 5rpx 5rpx 7rpx rgba(0,0,0, 0.3);
+  text-align: center;
+  color: black;
+  padding: 36rpx 0;
+  display:flex;
+  align-items: center;
+  flex-direction: column;
+}
 .alert-card {
   width: 94vw;
   margin: 0 3vw;
@@ -75,7 +82,6 @@ map {
 }
 
 .card-title {
-  text-shadow:1rpx 1rpx #333;
   text-align:center;
   font-size:50rpx;
   text-transform: capitalize;
@@ -83,4 +89,37 @@ map {
 
 .card-desc {
   padding: 0 30rpx;
+}
+.info-card-title {
+  text-align:center;
+  font-size:50rpx;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.info-card-desc {
+  padding: 0 30rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+}
+.info-card-desc-desc {
+  display: flex;
+  flex-direction: column;
+}
+.info-card-desc-titles {
+  display: flex;
+  flex-direction: column;
+}
+.info-card-desc-desc text {
+  text-align: right;
+  font-size: 32rpx;
+  text-transform: capitalize;
+}
+.info-card-desc-titles text {
+  text-align: left;
+  font-size:32rpx;
+  text-transform: capitalize;
 }
