--- a/pages/checkin/checkin.wxml
+++ b/pages/checkin/checkin.wxml
@@ -1,2 +1,6 @@
 <!--pages/checkin/checkin.wxml-->
-<text>pages/checkin/checkin.wxml</text>
+<view class="container">
+    <block wx:for="{{members}}" wx:for-item="element" wx:key="index">
+      <image class="avatar" src="{{element.photo}}" bindtap="navProfile" id="{{element.id}}"></image>
+    </block>
+  </view>
