--- a/pages/events/events.wxss
+++ b/pages/events/events.wxss
@@ -11,7 +11,8 @@
   margin-left: 20rpx;
   margin-right: 20rpx;
   border-radius: 10rpx;
-  animation: fadein 1s;
+  animation: slide-in 0.5s forwards;
+  -webkit-transform: translateX(-100%); 
 }
 
 .header {
@@ -133,7 +134,11 @@
 }
 
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+@keyframes slide-in {
+    100% { transform: translateX(0%); }
 }
+
+@-webkit-keyframes slide-in {
+    100% { -webkit-transform: translateX(0%); }
+}
+   
