--- a/pages/event/event.wxss
+++ b/pages/event/event.wxss
@@ -6,25 +6,28 @@
   font-weight: lighter;
 }
 .header {
-  height: 40px;
-  padding: 10px;
+  height: 80px;
   background-color: red;
   display: flex;
   align-items: center;
   justify-content: space-around;
   margin-bottom: 20px;
+  position: relative;
 }
 .avatar {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   border: black 1px solid;
-  margin: 5px;
-  margin-top: 20px;
+  position: absolute;
+  right: 20px;
 }
 .title {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: lighter;
+  position: absolute;
+  left: 20px;
+  color: #FBFFE9;
 }
 .button-holder {
   padding: 20px;
@@ -37,6 +40,18 @@
   margin-bottom: 10px;
   font-weight: bold;
 }
+.card-image {
+  width: 100%;
+  height: 100%;
+}
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2));
+  border-radius: 10rpx;
+  position: absolute;
+  top: 0;
+}
 
 map {
   margin: 50rpx 0;
@@ -45,16 +60,12 @@ map {
 }
 .info-card {
   width: 94vw;
-  margin: 0 3vw;
   margin-bottom: 20rpx;
-  background: linear-gradient(to bottom left, #FDFFEA ,#FFFBE6);
-  border-radius: 10rpx;
-  box-shadow: 5rpx 5rpx 7rpx rgba(0,0,0, 0.3);
-  text-align: center;
   color: black;
   padding: 36rpx 0;
-  display:flex;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
 }
 .alert-card {
@@ -91,18 +102,23 @@ map {
   padding: 0 30rpx;
 }
 .info-card-title {
-  text-align:center;
-  font-size:50rpx;
+  text-align: left;
+  font-size: 50rpx;
   text-transform: capitalize;
   margin-bottom: 10px;
   font-weight: bold;
-}
-
-.info-card-desc {
   padding: 0 30rpx;
+}
+.info-text {
+  margin-bottom: 10rpx;
+}
+.strong {
+  font-weight: bold !important;
+}
+.info-card-desc {
+  width: 90%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
 }
 .info-card-desc-desc {
