--- a/pages/events/events.wxml
+++ b/pages/events/events.wxml
@@ -12,12 +12,12 @@
 <!-- <text id="loading">LOADING</text> -->
 <block wx:for="{{ events }}" wx:for-item="event" wx:key="index">
   <view class="card" bindtap="viewEvent" id="{{event.id}}">
-  <image mode="aspectFill" src="/images/bund.jpeg" class="card-image"></image>
+  <image mode="aspectFill" src="{{event.location_photo}}" class="card-image"></image>
   <view class="overlay"></view>
     <view class="card-category">{{event.location_name}}</view>
     <view class="card-description">
       <image class="icon" src="/images/distance.png"> </image>
-      <text> {{event.distance}} </text>
+      <text> {{event.distance}} meters</text>
     </view>
     <view class="attendees">
       <image class="icon" src="/images/people.png"> </image>
